v2.1.4:
- Fixed: Adapted API call for game version retrieval. The Vintage Story Mods API no longer prepends a 'v' to game version strings (e.g., v1.20.11 is now 1.20.11).
- Improved: Enhanced configuration file handling by explicitly specifying UTF-8 encoding for both reading and writing config.ini.

v2.1.3:
- Fixed: The download link for ModsUpdater was broken due to a character issue.
- Build System: Migrated the binary creation process from Nuitka to cx_Freeze. This change aims to improve build compatibility and simplify the packaging workflow.

v2.1.2:
- Fixed: Improved the warning message displayed when a directory is found in the Mods folder. It now includes the name of the directory in question, providing clearer context to the user.
- Fixed: get_mod_path: Command line `modspath` argument is now correctly used.
- Updated: ko_KR.json file

v2.1.1:
- Fixed: Ensure mod icons are extracted when PDF export is disabled. The `if not args.no_pdf:` condition was moved within the `export_pdf` module to wrap only the PDF generation steps. This ensures that the icon extraction logic, which runs before PDF generation, is always executed, making icons available for other export formats (like HTML) even if PDF export is skipped.

v2.1.0:
- Fixed (welcome_display): Ensures that the update status message is always displayed. A logic issue prevented the "No new version available" message from being shown.
- Fixed: Correct mod icon is now displayed in the PDF modlist even if a manual update for that mod was skipped.
- Fixed: modlist_json for manual mode: download links were not for the correct version.
- Fixed: Incorrect input values for user responses.
- Fixed: updated_mods_changelog.txt was not being populated correctly for manual download mode.
- Added: Functionality to export the list of installed mods to an HTML file.
- Added: New command-line argument `--no-html` to disable HTML mod list export.
- Added: Display of the maximum game version for mod updates.