@@ -22,7 +22,7 @@
 """
 __author__ = "Laerinok"
 __version__ = "2.1.3"
-__date__ = "2025-06-20"  # Last update
+__date__ = "2025-08-24"  # Last update
 
 # mods_update_checker.py
 
@@ -46,43 +46,60 @@ def check_for_mod_updates():
     - Utilizing multithreading to efficiently process multiple mods.
     - Providing detailed logging for debugging and monitoring.
     """
-    check_excluded_mods()  # Update excluded mods list#
-    excluded_filenames = [mod['Filename'] for mod in global_cache.mods_data.get("excluded_mods", [])]
+    check_excluded_mods()  # Update excluded mods list
+    excluded_filenames = [mod['Filename'] for mod in
+                          global_cache.mods_data.get("excluded_mods", [])]
     mods_to_update = []
 
     with ThreadPoolExecutor() as executor:
         futures = []
         for mod in global_cache.mods_data.get("installed_mods", []):
-            futures.append(executor.submit(process_mod, mod, excluded_filenames, mods_to_update))
+            futures.append(executor.submit(process_mod, mod, excluded_filenames))
+
+        # We collect the results from the threads
         for future in as_completed(futures):
-            future.result()
+            mod_data = future.result()
+            if mod_data:
+                mods_to_update.append(mod_data)
 
-    global_cache.mods_data['mods_to_update'] = sorted(mods_to_update, key=lambda mod: mod["Name"].lower())
+    global_cache.mods_data['mods_to_update'] = sorted(mods_to_update,
+                                                      key=lambda mod: mod[
+                                                          "Name"].lower())
 
 
-def process_mod(mod, excluded_filenames, mods_to_update):
+def process_mod(mod, excluded_filenames):
     """
     Processes a single mod to check for updates and fetch changelog.
+    Returns the mod data if an update is found, otherwise None.
     """
     if mod['Filename'] in excluded_filenames:
         logging.info(f"Skipping excluded mod: {mod['Name']}")
-        return
+        return None  # We return None if the mod is excluded
 
-    if mod.get("mod_latest_version_for_game_version") and version_compare(mod["Local_Version"], mod["mod_latest_version_for_game_version"]):
+    # We check if an online version is available and if it is more recent
+    if mod.get("mod_latest_version_for_game_version") and version_compare(
+            mod["Local_Version"], mod["mod_latest_version_for_game_version"]):
         try:
-            # changelog = fetch_changelog.get_raw_changelog(mod['Name'], mod['AssetId'], mod['mod_latest_version_for_game_version'])
-            # The changelog (HTML) is already available in mod["Changelog"]
-            raw_changelog_html = mod.get("Changelog", "")
+            # Gets the changelog. If the key is missing, returns None.
+            raw_changelog_html = mod.get("Changelog")
 
-            # Convert HTML changelog to Markdown
-            changelog_markdown = convert_html_to_markdown(raw_changelog_html)
-            mods_to_update.append({
+            # Checks if the changelog is None before trying to convert it
+            changelog_markdown = ""
+            if raw_changelog_html is not None:
+                # Converts the HTML changelog to Markdown
+                changelog_markdown = convert_html_to_markdown(raw_changelog_html)
+            else:
+                logging.info(f"Changelog for {mod['Name']} not available.")
+
+            return {
                 "Name": mod['Name'],
                 "Old_version": mod['Local_Version'],
                 "New_version": mod['mod_latest_version_for_game_version'],
                 "Changelog": changelog_markdown,
                 "Filename": mod['Filename'],
-                "url_download": mod['latest_version_dl_url']
-            })
+                "download_url": mod['latest_version_dl_url']
+            }
         except Exception as e:
             logging.error(f"Failed to process changelog for {mod['Name']}: {e}")
+            return None
+    return None  # We return None if no update is found
