@@ -1,4 +1,5 @@
 v2.1.4:
+- Fixed and improved mod changelog retrieval. Mod changelog information is now fetched directly from the API.
 - Fixed: Adapted API call for game version retrieval. The Vintage Story Mods API no longer prepends a 'v' to game version strings (e.g., v1.20.11 is now 1.20.11).
 - Improved: Enhanced configuration file handling by explicitly specifying UTF-8 encoding for both reading and writing config.ini.
 
